[package]
name = "muzaiten-index"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[[bin]]
name = "muzaiten-index"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
rayon = "1.11"
rusqlite = { version = "0.40", features = ["bundled"] }
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.23"
