[project]
name = "muzaiten-features-clap"
version = "0.1.0"
description = "Optional CLAP capability provider for muzaiten features"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.23.5,<2.0.0",
]

[project.optional-dependencies]
model = [
    "laion-clap==1.1.7",
    "torch>=2.3",
    # laion-clap 1.1.7 imports torchvision without declaring it
    "torchvision>=0.18",
]

[project.scripts]
muzaiten-features-clap = "muzaiten_features_clap.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.13",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
