[project]
name = "muzaiten-features-clap"
version = "2026.7.12"
description = "Optional CLAP capability provider for muzaiten features"
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.23.5",
]

[project.optional-dependencies]
model = [
    "numpy>=1.23.5",
    "onnxruntime>=1.23",
    "tokenizers>=0.22",
]
convert = [
    "laion-clap==1.1.7",
    # The reference package is isolated to one-time conversion. Its librosa
    # stack currently rejects NumPy 2.5.
    "numpy<2.5",
    "onnx>=1.19",
    "torch>=2.3",
    # laion-clap 1.1.7 imports torchvision without declaring it.
    "torchvision>=0.18",
]

[project.scripts]
muzaiten-features-clap = "muzaiten_features_clap.cli:main"

[project.urls]
Homepage = "https://codeberg.org/11xx/muzaiten"
Documentation = "https://codeberg.org/11xx/muzaiten/src/branch/master/docs/semantic-analysis.md"
Issues = "https://codeberg.org/11xx/muzaiten/issues"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.13",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
